--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,8 +1,14 @@
 {
   "dependencies": {
     "@prisma/client": "^5.16.1",
+    "@sequelize/postgres": "^7.0.0-alpha.41",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "pg": "^8.12.0"
+    "express-session": "^1.18.0",
+    "morgan": "^1.10.0",
+    "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4",
+    "prisma": "^5.16.1"
   }
 }
