--- a/front-end/my-vite-app/.env
+++ b/front-end/my-vite-app/.env
@@ -1,1 +1,3 @@
 VITE_BACKEND_ADDRESS = http://localhost:3000
+VITE_PHOTO_API_KEY = rQAayG_V9eZA2-BB9-4sGYJajQP6og3W8EbaIC1dd_g
+VITE_YOUTUBE_API_KEY = AIzaSyBUgrG3C2rHVN6rdCHikXuzboRyijMAZ0o
