--- a/back-end/package.json
+++ b/back-end/package.json
@@ -3,12 +3,15 @@
     "@prisma/client": "^5.16.1",
     "@sequelize/postgres": "^7.0.0-alpha.41",
     "bcrypt": "^5.1.1",
+    "connect-redis": "^6.0.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "morgan": "^1.10.0",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
-    "prisma": "^5.16.1"
+    "prisma": "^5.16.1",
+    "redis": "^4.0.0"
   }
 }
