--- a/back-end/package.json
+++ b/back-end/package.json
@@ -11,7 +11,9 @@
     "morgan": "^1.10.0",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
-    "prisma": "^5.16.1",
     "redis": "^4.0.0"
+  },
+  "devDependencies": {
+    "prisma": "^5.16.2"
   }
 }
