--- a/front-end/my-vite-app/package.json
+++ b/front-end/my-vite-app/package.json
@@ -14,7 +14,9 @@
     "cors": "^2.8.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.24.0"
+    "react-markdown": "^9.0.1",
+    "react-router-dom": "^6.24.0",
+    "strip-markdown": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
