--- a/front-end/my-vite-app/package.json
+++ b/front-end/my-vite-app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.14.1",
+    "@monaco-editor/react": "^4.6.0",
     "cors": "^2.8.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
