--- a/front-end/package.json
+++ b/front-end/package.json
@@ -5,5 +5,16 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
     "vite": "^5.3.5"
-  }
+  },
+  "name": "front-end",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
