--- a/front-end/my-vite-app/package.json
+++ b/front-end/my-vite-app/package.json
@@ -11,17 +11,23 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.14.1",
+    "@liveblocks/client": "^2.13.0",
+    "@liveblocks/react": "^2.13.0",
+    "@liveblocks/yjs": "^2.13.0",
     "@monaco-editor/react": "^4.6.0",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
+    "lodash": "^4.17.21",
     "monaco-editor": "^0.50.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
     "websocket": "^1.0.35",
-    "y-monaco": "^0.1.5",
+    "y-monaco": "^0.1.6",
+    "y-protocols": "^1.0.6",
+    "y-webrtc": "^10.3.0",
     "y-websocket": "^2.0.4",
-    "yjs": "^13.6.18"
+    "yjs": "^13.6.20"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
