--- a/front-end/my-vite-app/package.json
+++ b/front-end/my-vite-app/package.json
@@ -22,6 +22,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "websocket": "^1.0.35",
     "y-monaco": "^0.1.6",
     "y-protocols": "^1.0.6",
